--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,3 +1,8 @@
-FROM openjdk:8-jre-alpine
-COPY test-0.0.1-SNAPSHOT.jar /app.jar 
-CMD ["/usr/bin/java", "-jar", "/app.jar"]
+FROM maven
+ADD /src/ /test/src/
+ADD /pom.xml /test/pom.xml
+WORKDIR /test
+RUN mvn clean install
+CMD java -jar target/test-0.0.1-SNAPSHOT.jar
+#CMD ["/usr/bin/java", "-jar", "/test/target/test-0.0.1-SNAPSHOT.jar"]
+#CMD /bin/bash
